--- a/newportal/Areas/Distributor/Views/Wallet/Credit.cshtml
+++ b/newportal/Areas/Distributor/Views/Wallet/Credit.cshtml
@@ -71,7 +71,14 @@
                     <input type="number" class="form-control form-control-lg shadow-sm fs-5" name="amount" id="amount"
                            step="0.01" min="1" required placeholder="e.g. 1000.00" />
                 </div>
-
+                <div class="mb-4">
+                    <label for="amount" class="form-label fw-semibold fs-5">Remarks</label>
+                    <input class="form-control form-control-lg shadow-sm fs-5" name="remarks" id="remarks" placeholder="Enter Remarks" />
+                </div>
+                <div class="mb-4">
+                    <label for="Tpin" class="form-label fw-semibold fs-5">Enter Your Tpin</label>
+                    <input type="password" class="form-control form-control-lg shadow-sm fs-5" name="Tpin" id="Tpin" required placeholder=" Enter Your Tpin " />
+                </div>
                 <div class="d-flex justify-content-end gap-3">
                     <a asp-action="Index" asp-controller="Dashboard" asp-area="Distributor" class="btn btn-outline-secondary btn-lg px-4">Cancel</a>
                     <button type="submit" class="btn btn-success btn-lg px-4">
